# gybe

./: .coveragerc  .gitignore  .gitmodules  .rgignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yaml
codegen/: generate_k8s.py  kubernetes  kubernetes.sh  test-no-duplicates
gybe/: __init__.py  clean.py  decorators.py  exceptions.py  modeling.py  protocols.py  yaml.py
gybe/codegen/: __init__.py  __main__.py  cli.py  k8s_modules.py
gybe/favorites/: kubernetes.py
gybe/k8s/: __init__.py  types.py
gybe/k8s/v1_26/admissionregistration/: v1.py  v1alpha1.py
gybe/k8s/v1_26/api/: resource.py
gybe/k8s/v1_26/apiextensions/: v1.py
gybe/k8s/v1_26/apiserverinternal/: v1alpha1.py
gybe/k8s/v1_26/apps/: v1.py
gybe/k8s/v1_26/authentication/: v1.py  v1alpha1.py
gybe/k8s/v1_26/authorization/: v1.py
gybe/k8s/v1_26/autoscaling/: v1.py  v2.py
gybe/k8s/v1_26/batch/: v1.py
gybe/k8s/v1_26/certificates/: v1.py
gybe/k8s/v1_26/coordination/: v1.py
gybe/k8s/v1_26/core/: v1.py
gybe/k8s/v1_26/discovery/: v1.py
gybe/k8s/v1_26/events/: v1.py
gybe/k8s/v1_26/flowcontrol/: v1beta2.py  v1beta3.py
gybe/k8s/v1_26/meta/: v1.py
gybe/k8s/v1_26/networking/: v1.py  v1alpha1.py
gybe/k8s/v1_26/node/: v1.py
gybe/k8s/v1_26/pkg/: version.py
gybe/k8s/v1_26/policy/: v1.py
gybe/k8s/v1_26/rbac/: v1.py
gybe/k8s/v1_26/resource/: v1alpha1.py
gybe/k8s/v1_26/scheduling/: v1.py
gybe/k8s/v1_26/storage/: v1.py  v1beta1.py
gybe/k8s/v1_27/admissionregistration/: v1.py  v1alpha1.py
gybe/k8s/v1_27/api/: resource.py
gybe/k8s/v1_27/apiextensions/: v1.py
gybe/k8s/v1_27/apiregistration/: v1.py
gybe/k8s/v1_27/apiserverinternal/: v1alpha1.py
gybe/k8s/v1_27/apps/: v1.py
gybe/k8s/v1_27/authentication/: v1.py  v1alpha1.py  v1beta1.py
gybe/k8s/v1_27/authorization/: v1.py
gybe/k8s/v1_27/autoscaling/: v1.py  v2.py
gybe/k8s/v1_27/batch/: v1.py
gybe/k8s/v1_27/certificates/: v1.py  v1alpha1.py
gybe/k8s/v1_27/coordination/: v1.py
gybe/k8s/v1_27/core/: v1.py
gybe/k8s/v1_27/discovery/: v1.py
gybe/k8s/v1_27/events/: v1.py
gybe/k8s/v1_27/flowcontrol/: v1beta2.py  v1beta3.py
gybe/k8s/v1_27/meta/: v1.py
gybe/k8s/v1_27/networking/: v1.py  v1alpha1.py
gybe/k8s/v1_27/node/: v1.py
gybe/k8s/v1_27/policy/: v1.py
gybe/k8s/v1_27/rbac/: v1.py
gybe/k8s/v1_27/resource/: v1alpha2.py
gybe/k8s/v1_27/scheduling/: v1.py
gybe/k8s/v1_27/storage/: v1.py
gybe/k8s/v1_28/admissionregistration/: v1.py  v1alpha1.py  v1beta1.py
gybe/k8s/v1_28/apiextensions/: v1.py
gybe/k8s/v1_28/apiregistration/: v1.py
gybe/k8s/v1_28/apiserverinternal/: v1alpha1.py
gybe/k8s/v1_28/apps/: v1.py
gybe/k8s/v1_28/authentication/: v1.py  v1alpha1.py  v1beta1.py
gybe/k8s/v1_28/authorization/: v1.py
gybe/k8s/v1_28/autoscaling/: v1.py  v2.py
gybe/k8s/v1_28/batch/: v1.py
gybe/k8s/v1_28/certificates/: v1.py  v1alpha1.py
gybe/k8s/v1_28/coordination/: v1.py
gybe/k8s/v1_28/core/: v1.py
gybe/k8s/v1_28/discovery/: v1.py
gybe/k8s/v1_28/events/: v1.py
gybe/k8s/v1_28/flowcontrol/: v1beta2.py  v1beta3.py
gybe/k8s/v1_28/meta/: v1.py
gybe/k8s/v1_28/networking/: v1.py  v1alpha1.py
gybe/k8s/v1_28/node/: v1.py
gybe/k8s/v1_28/pkg/: version.py
gybe/k8s/v1_28/policy/: v1.py
gybe/k8s/v1_28/rbac/: v1.py
gybe/k8s/v1_28/resource/: v1alpha2.py
gybe/k8s/v1_28/scheduling/: v1.py
gybe/k8s/v1_28/storage/: v1.py
gybe/k8s/v1_29/admissionregistration/: v1.py  v1alpha1.py  v1beta1.py
gybe/k8s/v1_29/apiextensions/: v1.py
gybe/k8s/v1_29/apiregistration/: v1.py
gybe/k8s/v1_29/apiserverinternal/: v1alpha1.py
gybe/k8s/v1_29/apps/: v1.py
gybe/k8s/v1_29/authentication/: v1.py  v1alpha1.py  v1beta1.py
gybe/k8s/v1_29/authorization/: v1.py
gybe/k8s/v1_29/autoscaling/: v1.py  v2.py
gybe/k8s/v1_29/batch/: v1.py
gybe/k8s/v1_29/certificates/: v1.py  v1alpha1.py
gybe/k8s/v1_29/coordination/: v1.py
gybe/k8s/v1_29/core/: v1.py
gybe/k8s/v1_29/discovery/: v1.py
gybe/k8s/v1_29/events/: v1.py
gybe/k8s/v1_29/flowcontrol/: v1.py  v1beta3.py
gybe/k8s/v1_29/meta/: v1.py
gybe/k8s/v1_29/networking/: v1.py  v1alpha1.py
gybe/k8s/v1_29/node/: v1.py
gybe/k8s/v1_29/policy/: v1.py
gybe/k8s/v1_29/rbac/: v1.py
gybe/k8s/v1_29/resource/: v1alpha2.py
gybe/k8s/v1_29/scheduling/: v1.py
gybe/k8s/v1_29/storage/: v1.py  v1alpha1.py
gybe/k8s/v1_29/util/: intstr.py
gybe/k8s/v1_30/admissionregistration/: v1.py  v1alpha1.py  v1beta1.py
gybe/k8s/v1_30/apiextensions/: v1.py
gybe/k8s/v1_30/apiregistration/: v1.py
gybe/k8s/v1_30/apiserverinternal/: v1alpha1.py
gybe/k8s/v1_30/apps/: v1.py
gybe/k8s/v1_30/authentication/: v1.py  v1alpha1.py  v1beta1.py
gybe/k8s/v1_30/authorization/: v1.py
gybe/k8s/v1_30/autoscaling/: v1.py  v2.py
gybe/k8s/v1_30/batch/: v1.py
gybe/k8s/v1_30/certificates/: v1.py  v1alpha1.py
gybe/k8s/v1_30/coordination/: v1.py
gybe/k8s/v1_30/core/: v1.py
gybe/k8s/v1_31/: __init__.py
gybe/kubernetes/: README.md  __init__.py  favorites.py
scripts/: create_k8s_models.sh
tests/: conftest.py  test_codegen.py  test_errors.py  test_example.py  test_kubernetes.py  test_nested_set.py  test_no_duplicates.py
(+409 files in other folders)
