[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "gybe"
author = "Peter Morrow"
author-email = "petermorrowtech@gmail.com"
home-page = "https://github.com/petermorrow/gybe"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires = [
    "click >=7.0.0",
    "pydantic >=1.0.0,<2.0.0",
    "PyYAML >=5.0.0",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
]
